Fix build error and add cache headers

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/media/favicon-formats/android-chrome-512x512.png" />
     <link rel="shortcut icon" href="/media/favicon-formats/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <meta
       name="description"
       content="Nicola Raffaello Tallone — violoncellista: concerti, progetti, insegnamento e galleria multimediale."
