--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/media/favicon-formats/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-formats/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-formats/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/media/favicon-formats/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/media/favicon-formats/android-chrome-512x512.png" />
-    <link rel="shortcut icon" href="/media/favicon-formats/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/media/logo-formats/icon-favicons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/media/logo-formats/icon-favicons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/media/logo-formats/icon-favicons/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/media/logo-formats/icon-favicons/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/media/logo-formats/icon-favicons/android-chrome-512x512.png" />
+    <link rel="shortcut icon" href="/media/logo-formats/icon-favicons/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/media/logo-formats/icon.svg" />
+    <link rel="manifest" href="/media/logo-formats/icon-favicons/site.webmanifest" />
+    <meta name="theme-color" content="#0C3044" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
