--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/media/favicon_io/android-chrome-512x512.png" />
     <link rel="shortcut icon" href="/media/favicon_io/favicon.ico" />
     <link rel="manifest" href="/media/favicon_io/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#0C3044" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
